[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "table_builder_io"
authors = [
    {name = "Matt Richards", email = "matt.richards@veitchlister.com"},
    {name = "Veitch Lister Consulting", email = "developers@veitchlister.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.6"
dynamic = ["version", "description"]
dependencies = [
    "pandas >=1.0",
    "dataclasses; python_version == '3.6'",
]

[project.urls]
Home = "https://github.com/vlc/table_builder_io"
